# yelp

./: alembic.ini  pyproject.toml  restaurants.csv  restaurants.sqlite
alembic/: env.py
alembic/versions/: 6e9abf877360_added_seats_nb_column_to_restaurants_.py  a87feb54b40d_added_restaurants_table.py
yelp/: database.py  main.py  models.py  schemas.py
