[tool.poetry]
name = "yelp"
version = "0.1.0"
description = ""
authors = ["Matthieu Rousseau <matthieurousseau86@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
uvicorn = "^0.20.0"
pydantic = "^1.10.2"
sqlalchemy = "^1.4.45"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
